# rust-basic-webserver

./: Cargo.toml  clippy.toml
.atl/: .skill-registry.cache.json  skill-registry.md
public/: app.js  form.html  index.html  styles.css  test.html  test.txt
scripts/: loadtest.js  run-loadtest.sh
src/: connection.rs  handlers.rs  main.rs  request.rs  response.rs  router.rs  static_files.rs
