[package]
name = "basic-webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
flate2 = "1"
tokio = { version = "1", features = ["full"] }

[lints.clippy]
# Grupos principales: errores de corrección y código sospechoso fallan el build.
correctness = "deny"
suspicious = "deny"

# Grupos de calidad y estilo se reportan como advertencias para no bloquear,
# pero mantienen el código limpio durante el desarrollo.
all = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
