[package]
name = "basic-webserver"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"

[dependencies]
anyhow = "1"
flate2 = "1"
percent-encoding = "2"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "time", "fs", "sync"] }

[lints.clippy]
# Grupos principales: errores de corrección y código sospechoso fallan el build.
correctness = "deny"
suspicious = "deny"

# Grupos de calidad y estilo se reportan como advertencias para no bloquear,
# pero mantienen el código limpio durante el desarrollo.
all = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
